Tried to do stretch, but ended up removing it as certain logic was just not doing it.  The Tic Tac Toe game was actually mostly working, but there were extremely rare bugs for computer`s moves and also, it would never display that it was computer`s turn when it was.  So, for now, I am scrapping it.

--- a/src/styles.less
+++ b/src/styles.less
@@ -7,7 +7,7 @@
 body {
   background-color: rgb(244, 244, 244);
   color: rgb(65, 75, 60);
-  font-family: 'Bitter', serif;
+  font-family: "Bitter", serif;
 }
 h2 {
   position: absolute;
@@ -15,7 +15,8 @@ h2 {
   left: 5%;
   transform-origin: center left;
 }
-button, input {
+button,
+input {
   margin: 3px;
   color: #7a6a6a;
   border: 1px solid rgb(210, 210, 210);
@@ -42,7 +43,7 @@ button, input {
 }
 @keyframes rotate {
   to {
-    transform: rotate(360deg)
+    transform: rotate(360deg);
   }
 }
 .spinner {
@@ -54,7 +55,7 @@ button, input {
 .squares {
   display: grid;
   grid-template-columns: 50px 50px;
-  grid-template-rows: 50px 50px; 
+  grid-template-rows: 50px 50px;
   column-gap: 10px;
   row-gap: 10px;
 
